Implement portfolio V1 web interfaces
